apps/github-actions-test-2/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-actions-test-2
  namespace: dev
  labels:
    backstage.io/kubernetes-id: github-actions-test-2
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /github-actions-test-2-dev
            pathType: Prefix
            backend:
              service:
                name: github-actions-test-2
                port:
                  number: 80
